# current-user-manager

./: README.md  cmake_script.sh  readme
ProfileManager/: .cproject  .project  CMakeLists.txt
ProfileManager/include/: CProfileManagerCfg.h  CProfileManagerCtrl.h  CProfileManagerCtrlConsumer.h  CommonApi.h  IdentificationPlugin.h  ProfileManageConsumerProxyBase.h  ProfileManagerCfg.h  ProfileManagerCtrl.fidl  ProfileManagerLog.h  ProfileManagerStub.h  SetUserIntf.h
ProfileManager/src/: CommonApiProfileManagerIntf.cpp  CommonApiProfileManagerIntf.h  CommonApiProfileManagerStub.cpp  CommonApiProfileManagerStub.h  ProfileManagerEventHandler.cpp  ProfileManagerLogic.cpp  ProfileManagerLogic.h  ProfileManagerMain.cpp  ProfileManagerMain.h
ProfileManager/src-gen/org/genivi/profile_mgmt_ctrl/: ProfileManagerCtrl.h  ProfileManagerCtrlStubDefault.h
ProfileManager/src/Common_API_proxy_intf/: ProfileManagerControllerIntf.cpp  ProfileManagerControllerIntf.h
ProfileManager/src/Common_API_stubs_implementation/: ProfileManagerCtrlStubImpl.cpp  ProfileManagerStubImpl.cpp  ProfileManagerStubImpl.h
ProfileManager/test/: EventMessageQ.cpp  EventMessageQ.h  EventReceiver.cpp  EventReceiver.h  ProfileManagerTestClient.cpp  ProfileManagerTestClient.h  ServerLoop.cpp  ServerLoop.h  TestBase.cpp  TestBase.h  TestFactory.cpp  TestFactory.h  TestMainLoop.cpp  TestModel.cpp  TestModel.h  TestProfileManagerConsumerProxy.cpp  TestProfileManagerConsumerProxy.h  TestRegister.cpp  TestRegister.h  TestSetUser.cpp  TestSetUser.h
ProfileManagerTest/: CMakeLists.txt
ProfileManagerTest/src/: Client.cpp  (+1 more)
workspace_profilemanager/: cmake_eclipse_script.sh  cmake_script.sh
workspace_profilemanager/ProfileManager/: CMakeLists.txt  ProfileManager.fidl  profile_manager_cfg
workspace_profilemanager/ProfileManager/cmake/Modules/: FindCommonAPI.cmake  FindCommonAPI_DBus.cmake  FindDBUS.cmake
workspace_profilemanager/ProfileManager/include/: ProfileManager.fidl  ProfileManagerCtrl.fidl
workspace_profilemanager/ProfileManager/src/: ProfileManagerEventHandler.cpp  ProfileManagerEventHandler.h  ProfileManagerLog.hpp  ProfileManagerLogic.cpp  ProfileManagerLogic.h  ProfileManagerMain.cpp  ProfileManagerMain.h  _global_.h  main.cpp
workspace_profilemanager/ProfileManager/src-gen/org/genivi/profile_mgmt/: ProfileManager.h  ProfileManagerConsumer.h  ProfileManagerConsumerDBusProxy.cpp  ProfileManagerConsumerDBusProxy.h  ProfileManagerConsumerDBusStubAdapter.cpp  ProfileManagerConsumerDBusStubAdapter.h  ProfileManagerConsumerProxy.h  ProfileManagerConsumerProxyBase.h  ProfileManagerConsumerStubDefault.h  ProfileManagerDBusProxy.cpp  ProfileManagerDBusProxy.h  ProfileManagerDBusStubAdapter.cpp  ProfileManagerDBusStubAdapter.h  ProfileManagerProxy.h  ProfileManagerProxyBase.h  ProfileManagerStub.h  ProfileManagerStubDefault.cpp
workspace_profilemanager/ProfileManager/src-gen/org/genivi/profile_mgmt_ctrl/: ProfileManagerCtrl.h  ProfileManagerCtrlConsumer.h  ProfileManagerCtrlConsumerDBusStubAdapter.cpp  ProfileManagerCtrlConsumerDBusStubAdapter.h  ProfileManagerCtrlConsumerProxy.h  ProfileManagerCtrlConsumerProxyBase.h  ProfileManagerCtrlConsumerStub.h  ProfileManagerCtrlConsumerStubDefault.h  ProfileManagerCtrlDBusProxy.cpp  ProfileManagerCtrlDBusProxy.h  ProfileManagerCtrlProxy.h  ProfileManagerCtrlProxyBase.h  ProfileManagerCtrlStub.h  ProfileManagerCtrlStubDefault.cpp  ProfileManagerCtrlStubDefault.h
workspace_profilemanager/ProfileManager/src/Common_API_proxy_intf/: ProfileManagerClientIntf.cpp  ProfileManagerClientIntf.h  ProfileManagerControllerIntf.cpp  ProfileManagerControllerIntf.h
workspace_profilemanager/ProfileManager/src/Common_API_stubs_implementation/: ProfileManagerCtrlStubImpl.cpp  ProfileManagerCtrlStubImpl.h  ProfileManagerStubImpl.cpp  ProfileManagerStubImpl.h
workspace_profilemanager/ProfileManagerTest/: CMakeLists.txt  ProfileManagerCtrl.fidl  profile_manager_cfg
workspace_profilemanager/ProfileManagerTest/cmake/Modules/: FindCommonAPI.cmake  FindDBUS.cmake
workspace_profilemanager/ProfileManagerTest/src/: Client.cpp  Client.h  Controller.cpp  Controller.h  TestMainLoop.cpp  _global_.h
workspace_profilemanager/ProfileManagerTest/src-gen/org/genivi/profile_mgmt/: ProfileManagerConsumer.h  ProfileManagerConsumerDBusProxy.cpp  ProfileManagerConsumerDBusStubAdapter.cpp  ProfileManagerConsumerProxyBase.h  ProfileManagerConsumerStub.h  ProfileManagerConsumerStubDefault.cpp  ProfileManagerDBusProxy.cpp  ProfileManagerDBusProxy.h  ProfileManagerDBusStubAdapter.cpp  ProfileManagerProxy.h  ProfileManagerProxyBase.h  ProfileManagerStub.h  ProfileManagerStubDefault.cpp  ProfileManagerStubDefault.h
workspace_profilemanager/ProfileManagerTest/src-gen/org/genivi/profile_mgmt_ctrl/: ProfileManagerCtrlConsumerDBusProxy.cpp  ProfileManagerCtrlConsumerDBusProxy.h  ProfileManagerCtrlConsumerDBusStubAdapter.cpp  ProfileManagerCtrlConsumerDBusStubAdapter.h  ProfileManagerCtrlConsumerProxyBase.h  ProfileManagerCtrlConsumerStubDefault.cpp  ProfileManagerCtrlDBusProxy.cpp  ProfileManagerCtrlDBusProxy.h  ProfileManagerCtrlDBusStubAdapter.cpp  ProfileManagerCtrlDBusStubAdapter.h  ProfileManagerCtrlProxy.h  ProfileManagerCtrlProxyBase.h  ProfileManagerCtrlStub.h  ProfileManagerCtrlStubDefault.cpp  ProfileManagerCtrlStubDefault.h
workspace_profilemanager/ProfileManagerTest/src/Common_API_proxy_intf/: ClientIntf.cpp  ClientIntf.h  ControllerIntf.cpp  ControllerIntf.h
workspace_profilemanager/ProfileManagerTest/src/Common_API_stubs_implementation/: ClientStubImpl.cpp  ClientStubImpl.h  ControllerStubImpl.cpp  ControllerStubImpl.h
workspace_profilemanager/ProfileManagerTest/src/FromProfileManager/: ProfileManagerCfg.hpp  ProfileManagerLog.hpp
workspace_profilemanager/ProfileManagerTest/src/tests/: TestBase.cpp  TestBase.h  TestRegister.cpp  TestRegister.h  TestSetUser.cpp  TestSetUser.h  TestUnregister.cpp  TestUnregister.h  TestUnsetUser.cpp  TestUnsetUser.h
workspace_profilemanager/cmake_ProfileManager/: CMakeLists.txt
workspace_profilemanager/cmake_ProfileManagerTest/: CMakeLists.txt
(+11 files in other folders)
